interact links to readme

--- a/02-Analysis.ipynb
+++ b/02-Analysis.ipynb
@@ -334,6 +334,7 @@
    },
    "outputs": [],
    "source": [
+    "females = [c for c in tech_data.to_df().columns if \"Female\" in c]\n",
     "tech_data.select(['Job Categories'] + females).barh('Job Categories')"
    ]
   },
@@ -345,6 +346,7 @@
    },
    "outputs": [],
    "source": [
+    "males = [c for c in tech_data.to_df().columns if \"Male\" in c]\n",
     "tech_data.select(['Job Categories'] + males).barh('Job Categories')"
    ]
   },
@@ -852,7 +854,7 @@
    },
    "outputs": [],
    "source": [
-    "with_race.to_df().groupby(['SEX'])['INCTOT'].mean().plot.bar()n"
+    "with_race.to_df().groupby(['SEX'])['INCTOT'].mean().plot.bar()"
    ]
   },
   {
@@ -958,6 +960,18 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {
+    "d6da18d919a5468e9acfa2eda6476b60": {
+     "views": [
+      {
+       "cell_index": 13
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
