small markdown changes

--- a/02-Analysis.ipynb
+++ b/02-Analysis.ipynb
@@ -106,8 +106,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What do you notice about the proportions of female LRE faculty across disciplines? Discuss with the people around you.\n",
-    "\n",
+    "What do you notice about the proportions of female LRE faculty across disciplines? Discuss with the people around you, and write a few sentences about it below. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Type your response here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "We see in other published materials that over the ten year period there has been an increase in underrepresented minorities at UCB:\n",
@@ -118,7 +130,8 @@
     "\n",
     "Female LRE faculty have grown in share over time, fueled by increased diversity in hiring. Their proportion differs significantly depending on discipline.\n",
     "\n",
-    "<img src=\"data/subject_line_graph.png\" alt=\"subject_line_graph\" style=\"width: 400px;\"/>"
+    "<img src=\"data/subject_line_graph.png\" alt=\"subject_line_graph\" style=\"width: 400px;\"/>\n",
+    "\n"
    ]
   },
   {
@@ -159,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "rd = UCB_data.select(2,3,4,5).sort(3, descending=True)\n",
@@ -218,6 +233,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install nltk.corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from scripts.gender import classify_gender\n",
     "\n",
     "classify_gender(\"Daniel\"), classify_gender(\"Katherine\")"
@@ -226,7 +259,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "professors.append_column(\"Gender\", [classify_gender(name) for name in professors['First Name']])\n",
@@ -236,7 +271,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "professors.to_df().groupby(['Gender'])['Gross Pay'].mean()"
@@ -245,7 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "professors.to_df().groupby(['Gender'])['Gross Pay'].mean().plot.bar()"
@@ -330,7 +369,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What do you see in this data?"
+    "What do you see in this data? (**Note**: It might be a little hard to see since the bars are so small - zoom in!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Type your response here."
    ]
   },
   {
@@ -360,7 +406,7 @@
    "source": [
     "### Job code subset\n",
     "\n",
-    "As you can see above, this table has a lot of information. The variables are in the columns and each row is an observation. First, we will subset this table to only include the occupations we want to analyze. Job codes are listed in the column `OCC2010`. We're going to focus on management and stem jobs."
+    "As you can see above, this table has a lot of information. The variables are in the columns and each row represents an individual. First, we will subset this table to only include the occupations we want to analyze. Job codes are listed in the column `OCC2010`. We're going to focus on management and stem jobs."
    ]
   },
   {
@@ -541,6 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the average total income for females vs. males\n",
     "with_race.to_df().groupby(['SEX'])['INCTOT'].mean()"
    ]
   },
@@ -561,6 +608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the average income by race\n",
     "with_race.to_df().groupby(['RACE'])['INCTOT'].mean()"
    ]
   },
@@ -733,6 +781,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Discuss this plot with the people around you and write a response below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Type your response here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -833,6 +895,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this plot is the same as the one in the previous section with job codes - copied here for your reference\n",
     "with_race_mean_sex = with_race.to_df().groupby(['SEX'])['INCTOT'].mean()\n",
     "with_race_mean_sex.plot.bar()\n",
     "with_race_mean_sex"
@@ -866,7 +929,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b = pd.DataFrame([bay_area_mean_sex, with_race_mean_sex, professors_mean_sex], [\"Entire Bay Area\", \"Biased subset\", \"Professors\"])\n",
@@ -883,7 +948,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b2 = pd.DataFrame(list(zip(bay_area_mean_sex, with_race_mean_sex, professors_mean_sex)), bay_area_mean_sex.keys())\n",
@@ -901,7 +968,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b"
@@ -917,7 +986,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b['MALE']-b['FEMALE']"
@@ -933,7 +1004,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b['FEMALE'] / b['MALE']"
@@ -1021,21 +1094,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   },
   "widgets": {
    "state": {
